--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -1,3 +1,7 @@
 %h1= @job.name
 %p=  @job.company
 %p=  @job.description
+
+%p= link_to 'All Jobs', jobs_path
+%p= link_to 'Edit Job', edit_job_path(@job)
+%p= link_to 'Delete', job_path(@job), method: :delete, data: { confirm: "Are you Sure?" }
