--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,5 +4,5 @@
 
 @import 'normalize';
 @import "global.css.scss";
-@import "notes.css.scss";
+@import "jobs.css.scss";
 @import "welcome.css.scss";
