--- a/app/views/jobs/edit.html.haml
+++ b/app/views/jobs/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 Edit a Job
+.wrapper_with_padding
+	%h1 Edit Job
 
-= render 'form'
+	= render 'form'
 
-= link_to "Cancel", job_path
+	= link_to "Cancel", job_path
