--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
 %body
 	%header
 		.header_inner
-			= link_to image_tag( 'logo.svg'), root_path, id: "logo"
+			= link_to image_tag( 'logo.png'), root_path, id: "logo"
 			%nav
 				- if user_signed_in?
 					= link_to "New Job", new_job_path
