--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -7,3 +7,6 @@
 		.buttons
 			= link_to "Edit", edit_job_path(@job), class: "button"
 			= link_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?" }, class: "button"
+			= link_to "Add New Candidate", new_job_profile_path(@job), class: "button"
+			= link_to "See All Candidates", job_profiles_path(@job), class: "button"
+
