--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -9,4 +9,4 @@
 		- else
 			%h2 Add a job
 			%p It appears you haven't created any jobs yet... Lets fix that. Why don't you go ahead and create a new job.
-			%p= link_to "New Note", new_note_path
+			%p= link_to "New Job", new_job_path
