--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @job do |f|
+	= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a Category"}
 	= f.input :name
 	= f.input :company
 	= f.input :description
