--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,9 @@
 			= link_to image_tag( 'logo.png'), root_path, id: "logo"
 			%nav
 				- if user_signed_in?
+					= link_to "All Jobs", jobs_path
+					- Category.all.each do |category|
+						= link_to category.name, jobs_path(category: category.name)
 					= link_to "New Job", new_job_path
 					= link_to "Sign Out", destroy_user_session_path, method: :delete
 				- else
