Fixing deployment issues

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -41,7 +41,7 @@
 }
 
 #callouts {
-	background-image: #000 image-url("callout_background.jpg");
+	background-image: image-url("callout_background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top center;
